<resources>
    <string name="app_name">StudyAndroid_1</string>
    <string name="xin_chao">xin chào</string>
    <string name="hello_linear">hello LinearLayout</string>
    <string name="txt_userName">UserName</string>
    <string name="txt_pass">Pass</string>
    <string name="title_ui1">Dặn thuốc</string>
    <string name="infor">Thông tin chung</string>
    <string name="issue_title">Bệnh</string>
    <string name="tv_startDate">Từ ngày</string>
    <string name="tv_endDate">Đến ngày</string>
    <string name="tv_number_medicine">Bạn hiện đang có 1 đơn thuốc</string>
    <string name="tv_index_medicine">Đơn thuốc 1</string>
    <string name="tv_use_medecine">Họat động uống thuốc</string>
    <string name="STT">STT</string>
    <string name="ten_thuoc">Tên thuốc</string>
    <string name="don_vi">Đơn vị</string>
    <string name="Lieu">Liều</string>
    <string name="cai_dat">Caì đặt</string>
    <string name="thiet_lap">Thiết lập chung</string>
    <string name="ngon_ngu">Languages</string>
    <string name="delete_memory">Xóa bộ nhớ</string>
    <string name="update">cập nhật</string>
    <string name="thiet_lap_noti">Thiết lập thông báo</string>
    <string name="send_noti">Gửi thông báo</string>
    <string name="music">am thanh</string>
    <string name="rung">rung</string>
    <string name="on">bật</string>
    <string name="off">Tắt</string>
    <string name="ky_danh">Ký danh</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="save_mat_khau">Lưu mật khẩu</string>
    <string name="quen_mat_khau">Quên mật khẩu</string>
    <string name="login">đăng nhập</string>
    <string name="thay_doi_infor">Thay đổi thông tin tài khoản</string>
    <string name="email">Email</string>
    <string name="old_pass">Mật khẩu cũ</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="re_new_pass">Nhập lại mật khẩu mới</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="show_pass">Hiện mật khẩu</string>
    <string name="phone">Số điện thoại</string>
    <string name="dthoai">Điện thoại</string>
    <string name="gop_y">Góp ý</string>
    <string name="ho_ten">Họ tên</string>
    <string name="ui2_title">Trang cá nhân</string>
    <string name="ui6_send">Gửi</string>
    <string name="ui6_noti">Đóng góp :( tối đa 400 ký tự)</string>
    <string name="ui7_title">GAMEPORTAL</string>
    <string name="ui7_name">Tên tài khoản</string>
    <string name="ui7_create_newAcc">Tạo tài khoản mới</string>
    <string name="ui7_login_other">Đăng nhập bằng tài khoản khác</string>
    <string name="ui7_Home">Trang chủ</string>
    <string name="ui7_Split">Phân loại</string>
    <string name="ui7_Disco">Khám phá</string>
    <string name="ui2_log_out">Đăng xuất</string>
    <string name="ui_dv_titel">Đặt vé 6/45</string>
    <string name="ui_dv_Select_play">Chọn cách chơi</string>
    <string name="ui_dv_how_play">Cách chơi</string>
    <string name="ui_dv_title2">Dãy số dự thưởng</string>
    <string name="ui_dv_title3">Chu kỳ tham dự</string>
    <string name="ui_dv_title4">Chọn loại vé</string>
    <string name="ui_dv_notice">(*)Cơ hội trúng thưởng dành cho tất cả mọi người</string>
    <string name="ui_dv_index">#A</string>
    <string name="ui_dv_radio_1">Vé giữ hô(MIỄN PHÍ)</string>
    <string name="ui_dv_radio_2">Vé giao tận nơi</string>
    <string name="ui_dv_radio_3">Vé nhận tại đại lý</string>
    <string name="ui_dv_tong_tien">Tổng tiền thanh toán</string>
    <string name="ui_dv_DAT_VE">ĐẶT VÉ</string>
    <string name="noti">Quý phụ huynh nên sử dụng email của chính mình để được cập nhật thông tin thường xuyên</string>
    <string name="inforTv">day la thong tin chiung .day la thong tin chiung .
        day la thong tin chiung .day la thong tin chiung .
    </string>
    <string-array name="array_spiner">
        <item>Tự chọn 6 số</item>
        <item>Tự chọn 7 số</item>
        <item>Tự chọn 8 số</item>
    </string-array>
    <string name="title_activity_bai8_2">Bai8_2</string>
    <string name="title_activity_bai9">Bai9</string>
    <string name="title_activity_bai10">Bai10</string>
    <string name="title_activity_bai10_2">Bai10_2</string>
    <string name="title_activity_bai11">Bai11</string>
    <string name="title_activity_dat_cuoc">Dat_cuoc</string>
    <string name="title_activity_bai12">Bai12</string>
    <string name="title_activity_recycle_view_card_view">RecycleViewCardView</string>
    <string name="title_activity_bai13">Bai13</string>
    <string name="title_activity_bai14">Bai14</string>
    <string name="title_activity_notification_activity">Notification_activity</string>
    <string name="title_activity_bai15">Bai15</string>
    <string name="title_activity_bai16">Bai16</string>
    <string name="title_activity_viewpager">Viewpager</string>
    <string name="title_activity_fragment">Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment 1</string>
    <string name="hello_blank_fragment2">Hello blank fragment 2</string>
    <string name="hello_blank_fragment3">Hello blank fragment 3</string>
    <string name="hello_blank_fragment4">Hello blank fragment 4</string>
    <string name="title_activity_async_task_demo">AsyncTaskDemo</string>
    <string name="title_activity_thread_handler_demo">ThreadHandlerDemo</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_main_slash_screen">MainSlashScreen</string>
    <string name="title_activity_volley_demo">VolleyDemo</string>
</resources>
