<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTextTitle"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorInforTitle"
            android:gravity="center_vertical"
            android:paddingLeft="50dp"
            android:text="@string/thay_doi_infor"
            android:textColor="@color/colorBkgInfor"
            android:textSize="@dimen/text_size_ui3" />

        <Button
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/back"
            android:paddingLeft="15dp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/border4black"
            android:hint="@string/email"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/border4black"
            android:hint="@string/old_pass"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/border4black"
            android:hint="@string/new_pass"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/border4black"
            android:hint="@string/re_new_pass"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/show_pass"
                android:textSize="@dimen/text_size_ui1"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/border4black"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/noti"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:background="@drawable/border4blue"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/update"
            android:textSize="@dimen/text_size_ui1" />
    </LinearLayout>

</LinearLayout>