<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:src="@drawable/icon_kid"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ky_danh"
        android:textSize="@dimen/text_size_ui1"
        android:paddingLeft="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorTextTitle"/>
    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:background="@color/colorInforTitle"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mat_khau"
        android:textSize="@dimen/text_size_ui1"
        android:paddingLeft="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorTextTitle"/>
    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:background="@color/colorInforTitle"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_mat_khau"
            android:textColor="@color/colorTextTitle"/>

    </LinearLayout>
    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/login"
        android:layout_gravity="center"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/quen_mat_khau"
        android:layout_gravity="center"
        />
</LinearLayout>