<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/ui3_title">
        <TextView
            android:id="@+id/gopy"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/gop_y"
            android:gravity="center"
            android:paddingLeft="50dp"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorBkgInfor"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:background="@drawable/home"
            android:paddingLeft="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/gopy">
            <Button
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/cai_dat"
                android:textColor="@color/colorTextTitle"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/gop_y"
                android:textColor="@color/colorTextTitle"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="350dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@color/colorBkgUI1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/ho_ten"
                android:textSize="@dimen/text_size_ui1"
                android:layout_gravity=""/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>